<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="movie"
            type="br.com.gms.domain.entity.MovieEntity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="br.com.android.marvel.ui.movies.MovieDetailsActivity">

        <!-- Toolbar -->
        <include
            android:id="@+id/toolbar_container"
            layout="@layout/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_default">


                <ImageView
                    android:id="@+id/image_view_poster"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/poster_great_heigth"
                    android:layout_gravity="center"
                    app:loadImageByUrl="@{movie.poster}"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    android:src="@drawable/image_default" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/plot"
                    android:textSize="@dimen/text_default_subtitle_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{movie.plot}"
                    tools:text="@string/lorem_ipsum" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/duration"
                    android:textSize="@dimen/text_default_subtitle_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{movie.runtime}"
                    tools:text="120 Min" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/genre"
                    android:textSize="@dimen/text_default_subtitle_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{movie.genre}"
                    tools:text="Action, Adventure, Sci-Fi" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/director"
                    android:textSize="@dimen/text_default_subtitle_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_director"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{movie.director}"
                    tools:text="Joss Whedon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/actors"
                    android:textSize="@dimen/text_default_subtitle_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_actors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{movie.actors}"
                    tools:text="Robert Downey Jr., Chris Evans, Mark Ruffalo, Chris Hemsworth" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>